# pptxvars

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
src/pptxvars/: __init__.py  cli.py  image_swap.py
templates/: example_prs.pptx  img_mapping.yml  replace.yml
