[project]
name = "pptxvars"
version = "0.1.0"
description = "Replace {{KEY}} tokens in PPTX while preserving styling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "build>=1.3.0",
    "python-pptx>=1.0.2",
    "pyyaml>=6.0.2",
    "twine>=6.1.0",
]

[project.scripts]
pptxvars = "pptxvars.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
